[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micropub-clippings"
version = "0.1.2"
description = "Publish curated bookmarks from Raindrop.io to Micro.blog via Micropub"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.scripts]
clippings = "clippings:main"

[project.urls]
Homepage = "https://github.com/mbradley/micropub-clippings"
